# ArchClaw

./: .gitignore  AI_TOOLS_GUIDE.md  ARCHITECTURE.md  Cargo.toml  DIRECTORY_STRUCTURE.md  FOCUSED_SUMMARY.md  IMPLEMENTATION_PHASES.md  LICENSE  MASTERPLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  QWEN_OAUTH_GUIDE.md  README.md  STANDALONE_APK_STATUS.md
.github/workflows/: build-apk.yml
android/: .gitignore  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: .gitkeep
android/app/src/main/res/drawable/: badge_background.xml  ic_launcher_bg.xml  ic_launcher_foreground.xml  ic_launcher_round.xml  ic_notification.xml  icon_circle.xml
android/app/src/main/res/layout/: activity_main.xml  activity_oauth_webview.xml  activity_setup_wizard.xml  activity_terminal.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
cli/: package.json
flutter_app/: pubspec.yaml
flutter_app/android/: settings.gradle
flutter_app/android/app/: build.gradle
flutter_app/lib/: app.dart  constants.dart  main.dart
flutter_app/lib/models/: ai_provider.dart  optional_package.dart  setup_state.dart
flutter_app/lib/providers/: desktop_provider.dart  gateway_provider.dart  hardware_provider.dart  settings_provider.dart  terminal_provider.dart
flutter_app/lib/screens/: configure_screen.dart  dashboard_screen.dart  onboarding_screen.dart  package_install_screen.dart  packages_screen.dart  settings_screen.dart  setup_wizard_screen.dart  splash_screen.dart  terminal_screen.dart
flutter_app/lib/services/: bootstrap_service.dart  gateway_service.dart  node_service.dart  package_service.dart  provider_config_service.dart  ssh_service.dart  terminal_service.dart
flutter_app/lib/services/capabilities/: capability_handler.dart  sensor_capability.dart  vibration_capability.dart
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/auth/: mod.rs  qwen_oauth.rs
rust/core/src/config/: mod.rs
rust/core/src/gateway/: mod.rs
rust/core/src/hardware/: mod.rs
rust/core/src/proot/: mod.rs
rust/core/src/tools/: mod.rs
rust/core/src/wayland/: mod.rs
scripts/: bootstrap-arch.sh  build-apk.sh  fetch-proot-binaries.sh  install.sh  setup-qwen-token.sh
(+24 files in other folders)
