[workspace]
members = ["rust/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
authors = ["ArchClaw Team"]
description = "Ultra-powered Linux desktop for Android with AI capabilities"
repository = "https://github.com/archclaw/archclaw"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Android
jni = "0.21"
ndk = "0.8"
ndk-context = "0.1"
ndk-sys = "0.5"

# Wayland
wayland-server = "0.31"
wayland-protocols = "0.32"
wayland-backend = "0.3"

# Networking
tungstenite = "0.21"
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"

# Filesystem
tokio-util = "0.7"
tempfile = "3.10"

# Cryptography
ring = "0.17"
aes-gcm = "0.10"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
